--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "7.8.0",
   "description": "Elegant and powerful theme for Hexo.",
   "main": "gulpfile.js",
-  "scripts": {
+  "scripts": {"build": "hexo generate"
     "test": "gulp"
   },
   "repository": {
